add invite members

--- a/docs/cloud/manage-team.mdx
+++ b/docs/cloud/manage-team.mdx
@@ -1,16 +1,17 @@
 ---
-title: "Invite and remove users"
-sidebarTitle: "3. Invite users"
+title: "Invite users"
+sidebarTitle: "Invite users"
+icon: "square-3"
 ---
 
 ### Invite users
 
 After you [signup](/cloud/onboarding/signup), you can invite team members to join you! 🎉
 
-On the top left button select `Account settings`, and you can invite users on the `Team` screen.
+Click on your initials on the top right of the screen and select `Team` to invite users.
 
 Users you invite will receive an Email saying you invited them, and will need to accept and activate their account.
 
 <Frame>
-  <img src="/pics/cloud/invite_users.png" />
+  <img src="https://res.cloudinary.com/diuctyblm/image/upload/v1704363455/add_users_xdicwh.png" />
 </Frame>
