added test_results_sample to faq

--- a/docs/general/faq.mdx
+++ b/docs/general/faq.mdx
@@ -12,6 +12,7 @@ description: "This section is aimed at collecting common questions users have to
 <Snippet file="faq/question-full-refresh.mdx" />
 <Snippet file="faq/question-elementary-permissions.mdx" />
 <Snippet file="faq/question-dbt-cloud.mdx" />
+<Snippet file="faq/question-test-results-sample.mdx" />
 <Snippet file="faq/question-cost.mdx" />
 
 <Accordion title="My question is not listed here">
