added `average` to column metrics docs

--- a/docs/_snippets/column-metrics.mdx
+++ b/docs/_snippets/column-metrics.mdx
@@ -11,6 +11,7 @@
 | `missing_percent`    | string      |
 | `min`                | numeric     |
 | `max`                | numeric     |
+| `average`            | numeric     |
 | `zero_count`         | numeric     |
 | `zero_percent`       | numeric     |
 | `standard_deviation` | numeric     |
