--- a/docs/data-tests/schema-tests/schema-changes-from-baseline.mdx
+++ b/docs/data-tests/schema-tests/schema-changes-from-baseline.mdx
@@ -19,7 +19,7 @@ Supported parameters for the test:
 **Notes**:
 
 1. Supported in Databricks with Unity Catalog only.
-2. Not supported in Athena.
+2. Not supported in Athena or Trino.
 
 ### Auto-generate baseline schema
 
