--- a/docs/data-tests/schema-tests/schema-changes.mdx
+++ b/docs/data-tests/schema-tests/schema-changes.mdx
@@ -10,7 +10,7 @@ Data Types note: Snowflake, Redshift and Postgres all has "synonym" data types, 
 **Notes**:
 
 1. Supported in Databricks with Unity Catalog only.
-2. Not supported in Athena.
+2. Not supported in Athena or Trino.
 
 <RequestExample>
 
