--- a/docs/_snippets/install-cli.mdx
+++ b/docs/_snippets/install-cli.mdx
@@ -14,6 +14,7 @@ pip install 'elementary-data[bigquery]'
 pip install 'elementary-data[redshift]'
 pip install 'elementary-data[databricks]'
 pip install 'elementary-data[athena]'
+pip install 'elementary-data[trino]'
 ## Postgres doesn't require this step
 ```
 
