--- a/docs/_snippets/cloud/integrations/permissions-and-security.mdx
+++ b/docs/_snippets/cloud/integrations/permissions-and-security.mdx
@@ -3,7 +3,7 @@
 Elementary cloud doesn't require read permissions to your tables and schemas, but only the following:
 
 - Read-only access to the elementary schema.
-- Metadata access to tables within your dbt databases (information schema and query history only - no read access required)
+- Metadata access to tables within your dbt databases (information schema and query history access only - no read access required)
 
 It is recommended to create a user using the instructions specified above to avoid granting excess privileges.
 For more details, refer to [security and privacy](/cloud/general/security-and-privacy).
