fixed broken link

--- a/docs/oss/oss-introduction.mdx
+++ b/docs/oss/oss-introduction.mdx
@@ -10,6 +10,8 @@ icon: "square-terminal"
   <Card
     title="Quickstart Elementary OSS"
     href="/oss/quickstart/quickstart-cli-package"
+    icon="circle-play"
+    iconType="solid"
   >
     Install the Elementary dbt package and CLI tool.
   </Card>
