--- a/docs/_snippets/cloud/quick-start-cards.mdx
+++ b/docs/_snippets/cloud/quick-start-cards.mdx
@@ -2,6 +2,8 @@
   <Card
     title="Quickstart Elementary Cloud"
     href="/cloud/onboarding/quickstart-dbt-package"
+    icon="circle-play"
+    iconType="solid"
   >
     Start 30 days free trial, no credit card is required.
   </Card>
