--- a/docs/overview/elementary-cloud.mdx
+++ b/docs/overview/elementary-cloud.mdx
@@ -10,6 +10,8 @@ icon: "cloud"
   <Card
     title="Quickstart Elementary Cloud"
     href="/cloud/onboarding/quickstart-dbt-package"
+    icon="circle-play"
+    iconType="solid"
   >
     Start 30 days free trial, no credit card is required.
   </Card>
