--- a/docs/overview/elementary-cloud.mdx
+++ b/docs/overview/elementary-cloud.mdx
@@ -15,8 +15,8 @@ icon: "cloud"
   >
     Start 30 days free trial, no credit card is required.
   </Card>
-  <Card title="Elementary Cloud documentation" href="/cloud/introduction">
-    Read more about Elementary Cloud usage, guides and integrations.
+  <Card title="Read more" href="/cloud/introduction">
+    Elementary cloud documentation, details about features, guides, integrations, security, etc.
   </Card>
 </CardGroup>
 
