--- a/docs/_snippets/oss/oss-introduction.mdx
+++ b/docs/_snippets/oss/oss-introduction.mdx
@@ -9,7 +9,7 @@
   ></Card>
   <Card
     title="Send Slack alerts"
-    icon="slack"
+    icon="bell-exclamation"
     href="/oss/guides/send-slack-alerts"
   ></Card>
   <Card
