--- a/docs/oss/guides/alerts/send-slack-alerts.mdx
+++ b/docs/oss/guides/alerts/send-slack-alerts.mdx
@@ -1,8 +1,6 @@
 ---
-title: "Setup Slack alerts"
+title: "Setup Slack Alerts"
 ---
-
-<Snippet file="alerts/alerts-introduction.mdx" />
 
 ## Setup Slack Integration
 
