--- a/docs/_snippets/alerts/alerts-introduction.mdx
+++ b/docs/_snippets/alerts/alerts-introduction.mdx
@@ -1,9 +1,12 @@
-Elementary has a Slack integration to send alerts about:
+Elementary can send alerts about:
 
 - Failures and/or of dbt tests
 - Failures and/or Elementary tests
 - Model runs failures
 - Source freshness issues
+
+The alerts can be sent to Slack or Microsoft Teams, and we are working on adding more channels.
+Please [reach out to us](https://elementary-data.com/community) if you have a specific destination in mind.
 
 You can enrich your alerts by adding properties to tests and models in your `.yml` files.
 The supported attributes are: owner, subscribers, description, tags.
@@ -14,8 +17,8 @@ custom channel, suppression interval, alert fields (for test alerts only), alert
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
     <img
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1686642474/slack_alert_gshqdm.png"
-      alt="New Slack alert format"
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1707742279/od5lminwcmktkjfh0lao.png"
+      alt="Slack alert format"
     />
   </div>
 </Frame>
