--- a/docs/features/elementary-alerts.mdx
+++ b/docs/features/elementary-alerts.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Slack Alerts"
-icon: "slack"
+title: "Failure Alerts"
+icon: "bell-exclamation"
 ---
 
 <Tip>
@@ -16,7 +16,7 @@ icon: "slack"
     Signup to cloud, and activate the Slack integration.
   </Card>
   <Card title="Setup alerts in OSS" icon="square-terminal" iconType="solid" href="/oss/guides/send-slack-alerts">
-    Install the CLI tool, and configure a profile. Use the `edr monitor` command to send Slack alerts.
+    Install the CLI tool, and configure a profile. Use the `edr monitor` command to send alerts.
     If you want continuous alerting, you will need to orchestrate the CLI.
   </Card>
 </CardGroup>
@@ -24,8 +24,8 @@ icon: "slack"
 ## Alerts configuration
 
 <CardGroup cols={2}>
-  <Card title="Alerts configuration in Cloud" icon="cloud" iconType="solid" href="/cloud/guides/alerts-configuration">
-    All alerts configuration is as code in your project YML files.
+  <Card title="Alerts configuration in Cloud" icon="cloud" iconType="solid" href="/cloud/guides/alert-rules">
+    Use Alert Rules to distribute your alerts to the right channels.
   </Card>
   <Card title="Alerts configuration in OSS" icon="square-terminal" iconType="solid" href="/oss/guides/alerts-configuration">
     All alerts configuration is as code in your project YML files.
