--- a/docs/key-features.mdx
+++ b/docs/key-features.mdx
@@ -22,8 +22,8 @@ icon: "stars"
     Upload metadata, run and test results to tables as part of your jobs.
   </Card>
   <Card
-    title="Slack alerts"
-    icon="slack"
+    title="Failure alerts"
+    icon="bell-exclamation"
     iconType="regular"
     href="/features/elementary-alerts"
   >
