fixes + alerts filters

--- a/docs/oss/guides/alerts/elementary-alerts.mdx
+++ b/docs/oss/guides/alerts/elementary-alerts.mdx
@@ -7,3 +7,30 @@ title: "Elementary alerts"
 </Tip>
 
 <Snippet file="alerts/alerts-introduction.mdx" />
+
+<CardGroup cols={2}>
+  <Card
+    title="Setup alerts on Slack"
+    iconType="solid"
+    href="/oss/guides/alerts/send-slack-alerts"
+  >
+  <br />
+  <img
+    noZoom
+    width="50"
+    src="https://res.cloudinary.com/dvmtceykh/image/upload/v1707817559/zdlkzpd7wfot3je5zcbt.png"
+  />
+  </Card>
+  <Card
+    title="Setup alerts on MS Teams"
+    iconType="solid"
+    href="oss/quickstart/quickstart-cli-package"
+  >
+  <br />
+  <img
+      noZoom
+      width="50"
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1707817559/m7o762irx6bfc0ts8e0j.png"
+    />
+  </Card>
+</CardGroup>
