--- a/docs/_snippets/oss/oss-introduction.mdx
+++ b/docs/_snippets/oss/oss-introduction.mdx
@@ -8,9 +8,9 @@
     href="/oss/guides/generate-report-ui"
   ></Card>
   <Card
-    title="Send Slack alerts"
+    title="Send alerts"
     icon="bell-exclamation"
-    href="/oss/guides/send-slack-alerts"
+    href="/oss/guides/alerts/elementary-alerts"
   ></Card>
   <Card
     title="Share the report"
