--- a/docs/oss/cli-commands.mdx
+++ b/docs/oss/cli-commands.mdx
@@ -10,7 +10,7 @@ edr --help
 
 ## CLI commands
 
-Read from the test results table and send new [alerts to Slack](/oss/guides/alerts-configuration):
+Read from the test results table and [send new alerts](/oss/guides/alerts/alerts-configuration):
 
 ```shell
 edr monitor
