--- a/docs/oss/guides/alerts/alerts-configuration.mdx
+++ b/docs/oss/guides/alerts/alerts-configuration.mdx
@@ -9,46 +9,57 @@ sidebarTitle: "Alerts configuration"
 
 #### Filter alerts
 
-Elementary supports filtering alerts using a selector, and sending only the selected alerts.
-You can filter the alerts by tag, owner or model.
+Elementary supports filtering the alerts by tag, owner, model, status or resource type.
 
-If you run `edr` from the dbt project directory (or pass `--project-dir`), you can use any of the dbt selectors.
+Using filters, you can send alerts to the relevant people and teams by running `edr` multiple times with different filters on each run.
 
-_Note_: alerts on skipped tests and models are filtered out by default. if you want to receive those alerts, apply the statuses filter and include them explicitly.
+<Warning>
+alerts on skipped tests and models are filtered out by default. if you want to receive those alerts, apply the statuses filter and include them explicitly.
+</Warning>
 
 <CodeGroup>
 
-```shell tag filter
-edr monitor --select tag:critical
-edr monitor --select tag:finance
+```shell tags filter
+edr monitor --filters tags:critical
+edr monitor --filters tags:finance,marketing
 ```
 
-```shell owner filter
-edr monitor --select config.meta.owner:@jeff
-edr monitor --select config.meta.owner:@jessy
+```shell owners filter
+edr monitor --filters owners:@jeff
+edr monitor --filters owners:@jessy,@jeff
 ```
 
-```shell model filter
-edr monitor --select model:customers
-edr monitor --select model:orders
-
-edr monitor --select customers
-edr monitor --select orders
+```shell models filter
+edr monitor --filters models:customers
+edr monitor --filters models:orders,customers,signups
 ```
 
 ```shell statuses filter
-edr monitor --select statuses:warn,fail
-edr monitor --select statuses:error
-edr monitor --select statuses:skipped
+edr monitor --filters statuses:warn,fail
+edr monitor --filters statuses:error
+edr monitor --filters statuses:skipped
 ```
 
 ```shell resource_types filter
-edr monitor --select resource_types:model
-edr monitor --select resource_types:test
-edr monitor --select resource_types:test,source_freshness
+edr monitor --filters resource_types:model
+edr monitor --filters resource_types:test
+edr monitor --filters resource_types:test,source_freshness
 ```
 
 </CodeGroup>
+
+The `--filters` flag can be used multiple times to apply multiple filters. The filters are combined using the logical AND operator.
+The comma `,` is used to separate multiple values for the same filter, creating a logical OR.
+
+<CodeGroup>
+
+```shell multiple filters
+edr monitor --filters resource_types:model --filters tags:finance,marketing
+```
+
+</CodeGroup>
+
+
 
 #### Group alerts by table
 
