fix broken links and more stuff

--- a/docs/_snippets/products-cards.mdx
+++ b/docs/_snippets/products-cards.mdx
@@ -5,7 +5,7 @@ Read about the key features and product offerings:
     title="Key Features"
     icon="stars"
     iconType="solid"
-    href="../../key-features"
+    href="/key-features"
   ></Card>
   <Card
     title="Elementary Cloud"
