--- a/docs/release-notes/releases/0.9.1.mdx
+++ b/docs/release-notes/releases/0.9.1.mdx
@@ -22,7 +22,7 @@ _July 20, 2023: [v0.9.1 Python](https://github.com/elementary-data/elementary/re
 - **Alert Suppression in CLI** 🚦
   - Now, you can suppress alerts in the Command Line Interface (CLI) using the --suppression-interval flag.
   - This feature gives you more control over your alerts and helps you manage notifications effectively.
-  - Check out the [docs](https://docs.elementary-data.com/oss/guides/send-slack-alerts)
+  - Check out the [docs](https://docs.elementary-data.com)
 
 ### 💫 More changes
 
