--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -1,14 +1,14 @@
 You can enrich your alerts by adding properties to tests, models and sources in your `.yml` files.
-The supported attributes are: [owner](./alerts-configuration/#owner),
-[subscribers](./alerts-configuration#subscribers),
-[description](./alerts-configuration#test-description),
-[tags](./alerts-configuration#tags).
+The supported attributes are: [owner](./alerts-code-configuration/#owner),
+[subscribers](./alerts-code-configuration#subscribers),
+[description](./alerts-code-configuration#test-description),
+[tags](./alerts-code-configuration#tags).
 
 You can configure and customize your alerts by configuring:
-[custom channel](./alerts-configuration#custom-channel),
-[suppression interval](./alerts-configuration#suppression_interval),
-[alert fields](./alerts-configuration#alert_fields)(for test alerts only), [alert grouping](./alerts-configuration#group-alerts-by-table),
-[alert filters](./alerts-configuration#filter-alerts).
+[custom channel](./alerts-code-configuration#custom-channel),
+[suppression interval](./alerts-code-configuration#suppression_interval),
+[alert fields](./alerts-code-configuration#alert_fields)(for test alerts only), [alert grouping](./alerts-code-configuration#group-alerts-by-table),
+[alert filters](./alerts-code-configuration#filter-alerts).
 
 ## Alert properties in `.yml` files
 
@@ -30,14 +30,14 @@ Elementary prioritizes configuration in the following order:
 <pre>
   <code>
   meta:
-  &nbsp;&nbsp;<a href="./alerts-configuration#owner"><font color="#CD7D55">owner: "@jessica.jones"</font></a>
-  &nbsp;&nbsp;<a href="./alerts-configuration#subscribers"><font color="#CD7D55">subscribers: ["@jessica.jones", "@joe.joseph"]</font></a>
-  &nbsp;&nbsp;<a href="./alerts-configuration#test-description"><font color="#CD7D55">description: "This is the test description"</font></a>
-  &nbsp;&nbsp;<a href="./alerts-configuration#tags"><font color="#CD7D55">tags: ["#marketing", "#data_ops"]</font></a>
-  &nbsp;&nbsp;<a href="./alerts-configuration#custom-channel"><font color="#CD7D55">channel: data_ops</font></a>
-  &nbsp;&nbsp;<a href="./alerts-configuration#suppression-interval"><font color="#CD7D55">alert_suppression_interval: 24</font></a>
-  &nbsp;&nbsp;<a href="./alerts-configuration#group-alerts-by-table"><font color="#CD7D55">slack_group_alerts_by: table</font></a>
-  &nbsp;&nbsp;<a href="./alerts-configuration#alert-fields"><font color="#CD7D55">alert_fields: ["description", "owners", "tags", "subscribers", ...]</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#owner"><font color="#CD7D55">owner: "@jessica.jones"</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#subscribers"><font color="#CD7D55">subscribers: ["@jessica.jones", "@joe.joseph"]</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#test-description"><font color="#CD7D55">description: "This is the test description"</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#tags"><font color="#CD7D55">tags: ["#marketing", "#data_ops"]</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#custom-channel"><font color="#CD7D55">channel: data_ops</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#suppression-interval"><font color="#CD7D55">alert_suppression_interval: 24</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#group-alerts-by-table"><font color="#CD7D55">slack_group_alerts_by: table</font></a>
+  &nbsp;&nbsp;<a href="./alerts-code-configuration#alert-fields"><font color="#CD7D55">alert_fields: ["description", "owners", "tags", "subscribers", ...]</font></a>
   </code>
 </pre>
 
@@ -434,7 +434,7 @@ You can choose to enable / disable alert types by adding a var to your `dbt_proj
 
 <Warning>
   Vars will be deprecated soon! For OSS users, we recommend filtering the alerts
-  using [CLI selectors](/oss/guides/alerts-configuration#alerts-cli-flags)
+  using [CLI selectors](/oss/guides/alerts/alerts-configuration#alerts-cli-flags)
   instead.
 </Warning>
 
