--- a/docs/oss/quickstart/quickstart-cli.mdx
+++ b/docs/oss/quickstart/quickstart-cli.mdx
@@ -24,6 +24,6 @@ Before installing the CLI, make sure to complete the steps dbt package installat
 
 1. Use the CLI to:
    - [Visualize all dbt test results and runs in a report](/oss/guides/generate-report-ui) ✨
-   - [Send informative Slack alerts](/oss/guides/send-slack-alerts) 📣
+   - [Send informative alerts on failures](/oss/guides/alerts/elementary-alerts) 📣
 2. [Add data anomaly detection dbt tests](/data-tests/add-elementary-tests) 📈
 3. [Deploy Elementary in production](/oss/deployment-and-configuration/elementary-in-production) 🚀
