--- a/docs/features/automated-monitors.mdx
+++ b/docs/features/automated-monitors.mdx
@@ -22,7 +22,7 @@ The monitors are trained on historical metadata, and adjust based on updates fre
   />
 </Frame>
 
-## Supported automated monitors:
+## Supported automated monitors
 
 ### Volume
 
