--- a/docs/cloud/integrations/bi/looker.mdx
+++ b/docs/cloud/integrations/bi/looker.mdx
@@ -23,6 +23,7 @@ To follow the [least privilege](https://en.wikipedia.org/wiki/Principle_of_least
         - `see_user_dashboards`
         - `see_sql`
         - `see_lookml`
+          - `develop`
 
 - **Create a role**
 
