remove dependency on git access for exposures from docs

--- a/docs/cloud/integrations/bi/tableau.mdx
+++ b/docs/cloud/integrations/bi/tableau.mdx
@@ -2,12 +2,9 @@
 title: "Tableau"
 ---
 
-In order to allow Elementary to continuously generate [dbt exposures](https://docs.getdbt.com/docs/build/exposures) from Tableau you will need to setup the following integrations:
+After you connect Tableau, Elementary will automatically and continuously extend the lineage to the dashboard level.
+This will provide you end-to-end data lineage to understand your downstream dependencies, called exposures.
 
-1. Connect Tableau - Elementary will continuously connect to Tableau to extract metadata.
-2. Connect dbt project [code repository](/cloud/integrations/code-repo/connect-code-repo) - Elementary will open a pull request to add exposures to your dbt project.
-
-## Connect Tableau
 
 In order for Elementary to extract your metadata from Tableau you must meet all of the Tableau Metadata GraphQL requirements (most are set by default):
 
@@ -40,9 +37,3 @@ Choose the Tableau BI connection and provide the following details to validate a
     alt="Connect Tableau to Elementary environment"
   />
 </Frame>
-
-## Connect dbt project [code repository](/cloud/integrations/code-repo/connect-code-repo)
-
-To allow Elementary to open pull requests to add exposures to your dbt project, follow the relevant guide according to your code repository provider:
-
-<Snippet file="cloud/integrations/cards-groups/code-repo-cards.mdx" />
