--- a/docs/cloud/integrations/bi/tableau.mdx
+++ b/docs/cloud/integrations/bi/tableau.mdx
@@ -8,12 +8,14 @@ This will provide you end-to-end data lineage to understand your downstream depe
 
 In order for Elementary to extract your metadata from Tableau you must meet all of the Tableau Metadata GraphQL requirements (most are set by default):
 
-- Tableau Cloud/Server 2019.3 or later.
+- Tableau Cloud / Server 2019.3 or later.
 - Tableau REST API must not be disabled.
 - The Metadata API must be enabled.
 - The Metadata API must be accessed via an access token.
 
-### Creating a Personal Access Token
+## Tableau Cloud
+
+### Creating Personal Access Token
 
 Create a Personal Access Token in Tableau. For details on how to create a user token please refer to the **[Tableau guide](https://help.tableau.com/current/pro/desktop/en-us/useracct.htm#create-a-personal-access-token)**.
 
@@ -37,3 +39,8 @@ Choose the Tableau BI connection and provide the following details to validate a
     alt="Connect Tableau to Elementary environment"
   />
 </Frame>
+
+
+## Tableau Server
+
+Elementary supports Tableau Server, reach out to our team for details. 
