--- a/docs/cloud/general/security-and-privacy.mdx
+++ b/docs/cloud/general/security-and-privacy.mdx
@@ -18,6 +18,10 @@ Our product is designed with security and compliance in mind.
   **SOC 2 certification:** Elementary Cloud is SOC2 type II certified!
 </Check>
 
+<Note>
+  If you are interested in advanced authentication such as MFA, Okta SSO, Microsoft AD - please contact us at cloud@elementary-data.com
+</Note>
+
 ## Security principals
 
 Elementary Cloud is designed with the core principle of least privilege.
