--- a/docs/cloud/onboarding/quickstart-dbt-package.mdx
+++ b/docs/cloud/onboarding/quickstart-dbt-package.mdx
@@ -1,11 +1,12 @@
 ---
 title: "Install Elementary dbt package"
 sidebarTitle: "Install dbt package"
-icon: "square-1"
+icon: "square-2"
 ---
 
 <Snippet file="quickstart-package-install.mdx" />
 
 ## What's next?
 
-[Signup to Elementary cloud](/cloud/onboarding/signup) and connect your data warehouse to Elementary Cloud to sync the Elementary schema.
+- [Connect your data warehouse](/cloud/onboarding/connect-data-warehouse)
+- [invite team members](/cloud/manage-team) to join!
