--- a/docs/cloud/onboarding/signup.mdx
+++ b/docs/cloud/onboarding/signup.mdx
@@ -1,7 +1,24 @@
 ---
-title: "Quickstart: Elementary Cloud"
-sidebarTitle: "Setup Elementary Cloud"
-icon: "square-2"
+title: "Create an account"
+sidebarTitle: "Create an account"
+icon: "square-1"
 ---
 
-<Snippet file="cloud/signup-and-connect-elementary-cloud.mdx" />
+<Steps>
+  <Step>
+    [Signup to Elementary](https://elementary-data.frontegg.com/oauth/account/sign-up) using Google SSO or email.
+
+    <Note>
+        If you are interested in advanced authentication such as MFA, Okta SSO, Microsoft AD - please contact us at cloud@elementary-data.com
+    </Note> 
+  </Step>
+  <Step>
+    [Install Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)
+  </Step>
+  <Step>
+    [Connect your data warehouse](/cloud/onboarding/connect-data-warehouse)
+  </Step>
+  <Step icon="party-horn">
+    [invite team members](/cloud/manage-team) to join!
+  </Step>
+</Steps>
