--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -1,5 +1,39 @@
 ---
-title: "Elementary Cloud vs Elementary OSS"
+title: "Elementary Cloud vs Elementary Community"
 sidebarTitle: "Cloud vs OSS"
 icon: "list-check"
 ---
+
+|                                                                       | Community (OSS)  | Elementary (Cloud) |
+|-----------------------------------------------------------------------|------------------|--------------------|
+| Deployment                                                            | Self hosted, CLI | Cloud service      |
+| **Data monitoring and detection**                                     |                  |                    |
+| Automated freshness, volume <br/> and schema monitors                 | ❌                | ✅                  |
+| In-pipeline data tests (via dbt)                                      | ✅                | ✅                  |
+| Data anomaly detection                                                |                  |                    |
+| Custom SQL tests                                                      |                  |                    |
+| Jobs performance and run results                                      |                  |                    |
+| Monitored data sets                                                   |                  |                    |
+| Table-level lineage                                                   |                  |                    |
+| Column-level lineage                                                  |                  |                    |
+| Lineage to BI tools                                                   |                  |                    |
+| Configuration as code (YML)                                           |                  |                    |
+| Add tests from UI                                                     |                  |                    |
+| _*Auto-tune configurations for improved accuracy*_                    |                  |                    |
+| _*Automated test recommendations*_                                    |                  |                    |
+| Communication and collaboration                                       |                  |                    |
+| Slack alerts                                                          |                  |                    |
+| Alert distribution rules, multiple <br/> destinations, custom formats |                  |                    |
+| Additional alert destinations: <br/> PagerDuty, OpsGenie, Webhook     |                  |                    |
+| Alert actions                                                         |                  |                    |
+| Data catalog                                                          |                  |                    |
+| Multiple environments and data warehouses                             |                  |                    |
+| Deployment, security and service                                      |                  |                    |
+| Secure by design - Elementary has no access to raw data               |                  |                    |
+| Managed service - 99.5% uptime, no maintenance                        |                  |                    |
+| Social login with Google                                              |                  |                    |
+| SSO using OKTA / OneLogin / AD                                        |                  |                    |
+| Custom deployment options                                             |                  |                    |
+| Role based access control                                             |                  |                    |
+| Custom contracts - DPA, MSA, MNDA                                     |                  |                    |
+| Support SLA                                                           |                  |                    |
