--- a/docs/_snippets/quickstart/quickstart-cards.mdx
+++ b/docs/_snippets/quickstart/quickstart-cards.mdx
@@ -1,12 +1,14 @@
 <CardGroup cols={2}>
   <Card
-    title="Elementary Cloud"
+    title="Elementary (Cloud service)"
     icon="cloud"
     iconType="solid"
-    href="/cloud/onboarding/quickstart-dbt-package"
+    href="https://elementary-data.frontegg.com/oauth/account/sign-up"
   >
     <br />
-    Fully managed data observability solution with premium features.
+        Ideal for teams monitoring mission-critical data pipelines, requiring guaranteed uptime and reliability, short-time-to-value, advanced features, collaboration, and professional support.
+    <br />
+        The solution is secure by design, and requires no access to your data from cloud.
     <br />
     Integrations:
     <img
@@ -15,14 +17,13 @@
     />
   </Card>
   <Card
-    title="Elementary OSS"
+    title="Elementary Community (OSS)"
     icon="square-terminal"
     iconType="solid"
-    href="oss/quickstart/quickstart-cli-package"
   >
     <br />
-    Deploy, orchestrate and self-host Elementary CLI in your environment.
-    <br />
+        For data and analytics engineers that require basic observability capabilities or for evaluating features without vendor approval. Our community can provide great support if needed.  
+    <br /><br /><br /><br /><br />
     Integrations:
     <img
       noZoom
