--- a/docs/cloud/manage-team.mdx
+++ b/docs/cloud/manage-team.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Invite users"
 sidebarTitle: "Invite users"
-icon: "square-3"
+icon: "square-4"
 ---
 
 ### Invite users
 
-After you [signup](/cloud/onboarding/signup), you can invite team members to join you! 🎉
+You can invite team members to join you! 🎉
 
 Click on your initials on the top right of the screen and select `Team` to invite users.
 
@@ -15,3 +15,10 @@ Users you invite will receive an Email saying you invited them, and will need to
 <Frame>
   <img src="https://res.cloudinary.com/diuctyblm/image/upload/v1704363455/add_users_xdicwh.png" />
 </Frame>
+
+
+## What's next?
+
+1. [Connect Slack or MS Teams](/cloud/guides/enable-slack-alerts) for alerting 🔔
+2. [Connect your code repository](/cloud/integrations/code-repo/connect-code-repo) to add tests configuration from the cloud 🔌
+3. [Connect your BI tool](/cloud/integrations/bi/connect-bi-tool) to automatically extend the lineage to dashboards 🚀
