--- a/docs/cloud/onboarding/connect-data-warehouse.mdx
+++ b/docs/cloud/onboarding/connect-data-warehouse.mdx
@@ -1,10 +1,7 @@
-### Signup to Elementary cloud
-
-[Create an account](https://elementary-data.frontegg.com/oauth/account/sign-up) using Google SSO or email.
-
-<Note>
-  If you are interested in advanced authentication such as MFA, Okta SSO, Microsoft AD - please contact us at cloud@elementary-data.com
-</Note>
+---
+title: "Connect data warehouse"
+icon: "square-3"
+---
 
 ### Create your first environment
 
@@ -34,14 +31,9 @@ Which data warehouse do you wish to connect?
 
 Elementary IP for allowlist: `3.126.156.226`
 
-### Need help with onboarding?
-
-We can provide [support on Slack](https://elementary-data.com/community) or hop on an [onboarding call](https://savvycal.com/MaayanSa/df29881c).
-
 ### What happens now?
 
 Once Elementary Cloud successfully connects to you data warehouse, it will start syncing data from the Elementary schema to cloud. This data includes tests results, run results, metadata and configuration.
 If you see data in the Elementary Dashboard you completed your connection (Congrats! 🎉).
 
 The syncs happen by default once an hour, but you can also [configure a triggered sync](/cloud/guides/sync-scheduling) to get a near real time experience.
-
