--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -4,4 +4,14 @@ sidebarTitle: "Quickstart"
 icon: "circle-play"
 ---
 
-<Snippet file="quickstart/quickstart-cards.mdx" />
+<Snippet file="cloud/quickstart-steps.mdx" />
+
+### Need help with onboarding?
+
+We can provide [support on Slack](https://elementary-data.com/community) or hop on a [guided onboarding call](https://savvycal.com/MaayanSa/df29881c).
+
+## What's next?
+
+1. [Connect Slack or MS Teams](/cloud/guides/enable-slack-alerts) for alerting 🔔
+2. [Connect your code repository](/cloud/integrations/code-repo/connect-code-repo) to add tests configuration from the cloud 🔌
+3. [Connect your BI tool](/cloud/integrations/bi/connect-bi-tool) to automatically extend the lineage to dashboards 🚀
