added cloud vs oss

--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -1,39 +1,61 @@
 ---
-title: "Elementary Cloud vs Elementary Community"
+title: "Elementary: Community vs Cloud"
 sidebarTitle: "Cloud vs OSS"
+description: Detailed comparison of Elementary product offerings. 
 icon: "list-check"
 ---
 
-|                                                                       | Community (OSS)  | Elementary (Cloud) |
-|-----------------------------------------------------------------------|------------------|--------------------|
-| Deployment                                                            | Self hosted, CLI | Cloud service      |
-| **Data monitoring and detection**                                     |                  |                    |
-| Automated freshness, volume <br/> and schema monitors                 | ❌                | ✅                  |
-| In-pipeline data tests (via dbt)                                      | ✅                | ✅                  |
-| Data anomaly detection                                                |                  |                    |
-| Custom SQL tests                                                      |                  |                    |
-| Jobs performance and run results                                      |                  |                    |
-| Monitored data sets                                                   |                  |                    |
-| Table-level lineage                                                   |                  |                    |
-| Column-level lineage                                                  |                  |                    |
-| Lineage to BI tools                                                   |                  |                    |
-| Configuration as code (YML)                                           |                  |                    |
-| Add tests from UI                                                     |                  |                    |
-| _*Auto-tune configurations for improved accuracy*_                    |                  |                    |
-| _*Automated test recommendations*_                                    |                  |                    |
-| Communication and collaboration                                       |                  |                    |
-| Slack alerts                                                          |                  |                    |
-| Alert distribution rules, multiple <br/> destinations, custom formats |                  |                    |
-| Additional alert destinations: <br/> PagerDuty, OpsGenie, Webhook     |                  |                    |
-| Alert actions                                                         |                  |                    |
-| Data catalog                                                          |                  |                    |
-| Multiple environments and data warehouses                             |                  |                    |
-| Deployment, security and service                                      |                  |                    |
-| Secure by design - Elementary has no access to raw data               |                  |                    |
-| Managed service - 99.5% uptime, no maintenance                        |                  |                    |
-| Social login with Google                                              |                  |                    |
-| SSO using OKTA / OneLogin / AD                                        |                  |                    |
-| Custom deployment options                                             |                  |                    |
-| Role based access control                                             |                  |                    |
-| Custom contracts - DPA, MSA, MNDA                                     |                  |                    |
-| Support SLA                                                           |                  |                    |
+### Elementary Cloud
+Ideal for teams monitoring mission-critical data pipelines, requiring guaranteed uptime and reliability, short-time-to-value, advanced features, collaboration, and professional support. The solution is secure by design, and requires no access to your data from cloud.
+
+### Elementary Community
+An open-source CLI tool you can deploy and orchestrate to send Slack alerts and self-host the Elementary report. It is best for data and analytics engineers that require basic observability capabilities or for evaluating features without vendor approval.
+
+### Features comparison
+
+|                                                                       |   Community (OSS)   |  Elmentary Cloud  |
+|-----------------------------------------------------------------------|:-------------------:|:-----------------:|
+| **Data monitoring and detection**                                     |                     |                   |
+| Automated freshness, volume <br/> and schema monitors                 |          ❌          |         ✅         |
+| In-pipeline data tests (via dbt)                                      |          ✅          |         ✅         |
+| Data anomaly detection                                                |          ✅          |         ✅         |
+| Custom SQL tests                                                      |          ✅          |         ✅         |
+| Jobs performance and run results                                      |          ✅          |         ✅         |
+| Monitored data sets                                                   |      dbt only       |    All tables     |
+| **Root cause and impact analysis**                                    |                     |                   |
+| Table-level lineage                                                   |          ✅          |         ✅         |
+| Column-level lineage                                                  |          ❌          |         ✅         |
+| Lineage to BI tools                                                   |          ❌          |         ✅         |
+| **Coverage and configuration**                                        |                     |                   |
+| Configuration as code (dbt YAML)                                      |          ✅          |         ✅         |
+| Add tests from UI                                                     |          ❌          |         ✅         |
+| 🚧 *Auto-tune configurations <br/> for improved accuracy*             |          ❌          |         ✅         |
+| 🚧 *Automated test recommendations*                                   |          ❌          |         ✅         |
+| **Communication and collaboration**                                   |                     |                   |
+| Slack and MS Teams alerts                                             |          ✅          |         ✅         |
+| Alert distribution rules, multiple <br/> destinations, custom formats |          ❌          |         ✅         |
+| Additional alert destinations: <br/> PagerDuty, OpsGenie, Webhook     |          ❌          |         ✅         |
+| 🚧 *Alert actions*                                                    |          ❌          |         ✅         |
+| Data catalog                                                          |          ❌          |         ✅         |
+| **Deployment, security and service**                                  |                     |                   |
+| Deployment                                                            |  Self hosted, CLI   |   Cloud service   |
+| Multiple environments and data warehouses                             |          ❌          |         ✅         |
+| Secure by design - <br/> Elementary has no access to raw data         |          ❌          |         ✅         |
+| Managed service - 99.9% uptime,<br/> no maintenance                   |          ❌          |         ✅         |
+| Social login with Google                                              |          ❌          |         ✅         |
+| SSO using OKTA / OneLogin / AD                                        |          ❌          |         ✅         |
+| Custom deployment options                                             |          ❌          |         ✅         |
+| 🚧 *Role based access control*                                        |          ❌          |         ✅         |
+| Support SLA                                                           |  Community support  |   24 hours SLA    |
+
+
+### Want to know more?
+
+<Card
+title="Book a call with our team"
+href="https://cal.com/maayansa/elementary-intro-docs"
+></Card>
+<Card
+title="Reach out to us on slack"
+href="https://elementary-data.com/community"
+></Card>
