--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -56,6 +56,6 @@ title="Book a call with our team"
 href="https://cal.com/maayansa/elementary-intro-docs"
 ></Card>
 <Card
-title="Reach out to us on slack"
+title="Reach out to us on Slack"
 href="https://elementary-data.com/community"
 ></Card>
