--- a/docs/resources/community.mdx
+++ b/docs/resources/community.mdx
@@ -2,3 +2,8 @@
 title: "Community"
 url: "https://www.elementary-data.com/community"
 ---
+
+<Card
+title="Community Slack"
+href="https://elementary-data.com/community"
+></Card>
