--- a/docs/features/ci.mdx
+++ b/docs/features/ci.mdx
@@ -21,9 +21,9 @@ Elementary CI automations will help you make changes with confidence and seeing 
 
 <Card
   title="Schedule a call"
-  href="https://calendly.com/maayansa/call-with-elementary-data"
+  href="https://cal.com/maayansa/elementary-intro-docs"
 ></Card>
 <Card
-  title="Reach out to us on slack"
+  title="Reach out to us on Slack"
   href="https://elementary-data.com/community"
 ></Card>
