--- a/docs/resources/pricing.mdx
+++ b/docs/resources/pricing.mdx
@@ -2,3 +2,8 @@
 title: "Pricing"
 url: "https://www.elementary-data.com/pricing"
 ---
+
+<Card
+title="Elementary Pricing"
+href="https://www.elementary-data.com/pricing"
+></Card>
