--- a/docs/cloud/guides/troubleshoot.mdx
+++ b/docs/cloud/guides/troubleshoot.mdx
@@ -7,7 +7,7 @@ title: "Troubleshooting"
 This error can happen because of a few reasons:
 
 1. check that your elementary dbt package version is 0.12.0 or higher
-2. check that the user you are using to connect to your database has permissions to access the information schema
+2. check that the user you are using to connect to your database has permission to access the information schema of all the schemas built or used by your dbt project
 
 For more information on the permissions required by each data warehouse:
 
