--- a/docs/data-tests/introduction.mdx
+++ b/docs/data-tests/introduction.mdx
@@ -87,7 +87,7 @@ Tests to detect anomalies in data quality metrics such as volume, freshness, nul
 </Card>
 
 <Card title="JSON schema" href="/data-tests/schema-tests/json-schema">
-  Monitors a JSON type column and fails id there are JSON events that don't
+  Monitors a JSON type column and fails if there are JSON events that don't
   match a configured JSON schema (can be generated with a macro).
 </Card>
 
