--- a/docs/features/exposures-lineage.mdx
+++ b/docs/features/exposures-lineage.mdx
@@ -43,7 +43,7 @@ exposures:
 
 <Snippet file="cloud/cloud-feature-tag.mdx" />
 
-Elementary will automatically and continuously extend column-level-lineage the lineage to the dashboard level of your data visualization tool.
+Elementary will automatically and continuously extend the column-level-lineage to the dashboard level of your data visualization tool.
 
 </Accordion>
 
