--- a/docs/_snippets/cloud/integrations/cards-groups/alerts-destination-cards.mdx
+++ b/docs/_snippets/cloud/integrations/cards-groups/alerts-destination-cards.mdx
@@ -52,6 +52,13 @@
     }
   ></Card>
   <Card
+    title="Webhooks"
+    href="cloud/integrations/alerts/webhooks"
+    icon="webhook"
+    iconType="solid"
+  >
+  </Card>
+  <Card
     title="Opsgenie"
     href="https://tally.so/r/3N6DlW?integration=Opsgenie"
     icon={
