--- a/docs/cloud/guides/alerts-configuration.mdx
+++ b/docs/cloud/guides/alerts-configuration.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Alerts configuration"
+title: "Alerts code configuration"
 ---
 
 <Snippet file="guides/alerts-code-configuration.mdx" />
