--- a/docs/cloud/integrations/bi/connect-bi-tool.mdx
+++ b/docs/cloud/integrations/bi/connect-bi-tool.mdx
@@ -3,7 +3,7 @@ title: "Automated lineage to Data Visualization layer"
 sidebarTitle: "Automated BI lineage"
 ---
 
-Elementary will automatically and continuously extend column-level-lineage the lineage to the dashboard level of your data visualization tool.
+Elementary will automatically and continuously extend the column-level-lineage to the dashboard level of your data visualization tool.
 This will provide you end-to-end data lineage to understand your downstream dependencies, called exposures.
 
 ### Why is end-to-end data lineage useful?
